fixed font size and appearance on mobiles

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     text-align: center;
     display: flex;
     padding: 5%;
+    font-family: Dejavu Sans, Airal, Verdana, sans-serif;
 }
 div {
     flex: 1;
@@ -19,14 +20,12 @@ table {
     background-color: #4c566a;
     padding: 5px;
 }
-.winner {
-    background-color: #b48ead;
-    border-radius: 8px;
+#winner {
     margin: auto auto;
-    width: 260px;
+    font-size: 60px;
 }
 td {
-    font-size: xx-large;
+    font-size: 60px;
     font-weight: bold;
     text-align: center;
     background-color: #3b4252;
@@ -36,4 +35,13 @@ td {
 }
 td:hover {
     background-color: #434c5e;
+}
+
+@media screen and (max-width: 990px) {
+    td {
+        width: 180px;
+        height: 180px;
+        font-size: 100px;
+    }
+    #winner { font-size: 100px;}
 }
